# yolov8-plate

./: README.md  detect_rec_plate.py  get_model_params.py  model_stats.txt
clanguage/: CMakeLists.txt  detect_rec_plate.cpp  plate_rec.cpp  yolov8s.cpp
mimetic_deploy_example/: README.md  model.c  model.pt  model_train.py  model_weights.txt  model_weights_export.py
